--- a/m2/Module2 - Assignment1.html
+++ b/m2/Module2 - Assignment1.html
@@ -99,7 +99,7 @@
 		<div class = "container">
 			<div class = "row">
 				<div class="col-md-4">
-					<img src = "C:\Users\user\Downloads\img.jpg" class = "image">
+					<img src = "img.jpg" class = "image">
 					<h3 id = "info" style="color: blue;background-color:#ECFB14;">Contact Info</h3>
 					<p><a style = "color:black">
           				<span class="glyphicon glyphicon-map-marker"></span>
